--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: flicexyzantixray
-version: '1.7'
+version: '2.5'
 main: com.omdmrotat.flicexyzantixray.YLevelHiderPlugin
 api-version: '1.20'
 load: STARTUP
@@ -30,9 +30,9 @@ commands:
     usage: /ylevelhiderworld <list|add|remove> [worldName]
     permission: ylevelhider.admin
 permissions:
-# ylevelhider.admin:
-#   description: Allows access to YLevelHider admin commands.
-#   default: op
+  ylevelhider.admin:
+    description: Allows access to YLevelHider admin commands.
+    default: op
   ylevelhider.debug:
     description: Allows toggling of YLevelHider debug mode.
     default: op
